k8s/12-postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres
    namespace: bank
spec:
    type: ClusterIP
    clusterIP: None
    selector:
        app: postgres
    ports:
        - port: 5432
          targetPort: 5432
          name: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres
    namespace: bank
spec:
    serviceName: postgres
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                - name: postgres
                  image: postgres:16-alpine
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - name: data
                        mountPath: /var/lib/postgresql/data
                      - name: init
                        mountPath: /docker-entrypoint-initdb.d
                  readinessProbe:
                      exec:
                          command: ["pg_isready", "-U", "bank", "-d", "bankdb"]
                      initialDelaySeconds: 5
                      periodSeconds: 5
                  livenessProbe:
                      exec:
                          command: ["pg_isready", "-U", "bank", "-d", "bankdb"]
                      initialDelaySeconds: 15
                      periodSeconds: 20
                  resources:
                      requests:
                          cpu: 100m
                          memory: 128Mi
                      limits:
                          cpu: 500m
                          memory: 512Mi
            volumes:
                - name: init
                  configMap:
                      name: postgres-init
    volumeClaimTemplates:
        - metadata:
              name: data
          spec:
              accessModes: ["ReadWriteOnce"]
              resources:
                  requests:
                      storage: 1Gi
