k8s/30-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: bank
    labels:
        app: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: bank-frontend:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 80
                  readinessProbe:
                      httpGet:
                          path: /
                          port: 80
                      initialDelaySeconds: 3
                      periodSeconds: 5
                  livenessProbe:
                      httpGet:
                          path: /
                          port: 80
                      initialDelaySeconds: 15
                      periodSeconds: 20
                  resources:
                      requests:
                          cpu: 25m
                          memory: 32Mi
                      limits:
                          cpu: 100m
                          memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: bank
spec:
    type: ClusterIP
    selector:
        app: frontend
    ports:
        - port: 80
          targetPort: 80
          name: http
